@@ -2,7 +2,15 @@ Changelog for hydra
 -------------------
 
 Release 8.6-dev
-* ...
+* added radmin2 module by catatonic prime - great work!
+* smb module now checks if SMBv1 is supported by the server and if signing is required
+* http-form module now supports URLs up to 6000 bytes (thanks to petrock6@github for the patch)
+* Fix for SSL connections that failed with error:00000000:lib(0):func(0):reason(0) (thanks gaia@github for reporting)
+* Added new command line option:
+   -c TIME: seconds between login attempts (over all threads, so -t 1 is recommended)
+* Options put after -R (for loading a restore file) are now honored (and were disallowed before)
+* merged several patches by Diadlo@github to make the code easier readable. thanks for that!
+* merged a patch by Diadlo@github that moves the help output to the invididual module
 
 
 Release 8.5
